# onlinemagaz

./: README.md  pyproject.toml  requirements.txt
OnlineStore/store/: admin.py  models.py
OnlineStore/store/management/commands/: start_parsing_tasks.py
OnlineStore/store/migrations/: 0002_parsedpricesforitem.py  0003_alter_parsedpricesforitem_item.py
OnlineStore/templates/store/: item_details.html  tag_details.html
