[tool.poetry]
name = "storeproject"
version = "0.1.0"
description = ""
authors = ["Nurs <jackmovies01@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "3.2.10"
django-taggit = "3.1.0"
python-telegram-bot = "^21.2"
python-dotenv = "^1.0.1"
pillow = "^10.3.0"
schedule = "^1.2.1"
requests = "^2.32.2"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
